adjusting styling for laptop breakpoint ; (fixing vsc code alignment)

--- a/scss/style.css
+++ b/scss/style.css
@@ -1,5 +1,3 @@
-/* variables */
-/* base styles */
 *,
 * *::before,
 *::after {
@@ -295,7 +293,7 @@ footer a {
             justify-content: space-evenly;
   }
   .profile-photo {
-    width: 97%;
+    max-width: 97%;
     -ms-grid-column: 3;
     -ms-grid-column-span: 2;
     grid-column: 3 / 5;
@@ -306,11 +304,11 @@ footer a {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    border-radius: 35%;
-    -webkit-border-radius: 35%;
-    -moz-border-radius: 35%;
-    -ms-border-radius: 35%;
-    -o-border-radius: 35%;
+    border-radius: 37%;
+    -webkit-border-radius: 37%;
+    -moz-border-radius: 37%;
+    -ms-border-radius: 37%;
+    -o-border-radius: 37%;
   }
   .name {
     font-size: 1.15rem;
@@ -396,19 +394,20 @@ footer a {
 
 @media screen and (min-device-width: 1024px) and (max-device-width: 1439px) and (-webkit-min-device-pixel-ratio: 1) {
   .container {
-    padding: 2rem 10rem;
+    padding: 2rem 11rem;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
   }
   .profile-photo {
-    margin: 3rem 0rem 0rem 2.5rem;
-    border-radius: 35%;
-    -webkit-border-radius: 57px;
-    -moz-border-radius: 57px;
-    -ms-border-radius: 57px;
-    -o-border-radius: 57px;
+    margin: 2rem 0rem 0rem 5rem;
+    border-radius: 37%;
+    max-width: 70%;
+    -webkit-border-radius: 37%;
+    -moz-border-radius: 37%;
+    -ms-border-radius: 37%;
+    -o-border-radius: 37%;
   }
   .name {
     font-size: 1.5rem;
@@ -418,17 +417,17 @@ footer a {
   .town {
     font-size: 0.875rem;
     line-height: 0.95rem;
-    margin: 0.2rem 0 0.5rem 0;
+    margin: 0.2rem 0 0.8rem 0;
   }
   .rectangle {
-    width: 100px;
+    max-width: 100px;
     height: 67px;
     border-radius: 1rem;
     font-size: 1rem;
     line-height: 1.2rem;
     text-align: center;
     padding: 0.9rem;
-    margin: 0.2rem 0rem 1.7rem 0rem;
+    margin: 0.2rem 0rem 3rem 0rem;
   }
   .rectangle1 {
     margin-left: 5rem;
@@ -441,18 +440,25 @@ footer a {
   }
   .gallery__item--1 {
     -ms-grid-column: 1;
-    -ms-grid-column-span: 2;
-    grid-column: 1 / 3;
-    margin: 0rem -3.2rem 0.3rem 0.6rem;
+    -ms-grid-column-span: 3;
+    grid-column: 1 / 4;
+    margin: 0rem 0rem 0.5rem 0rem;
+    width: 87%;
   }
   .gallery__item--2 {
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 6;
-    grid-column: 3 / 9;
-    margin: 0 0.6rem 1rem 3.5rem;
+    -ms-grid-column: 4;
+    -ms-grid-column-span: 5;
+    grid-column: 4 / 9;
+    margin: 0rem 0rem 0.5rem -1.8rem;
+    width: 107%;
+  }
+  .gallery__item--3 {
+    margin: 0.2rem 0rem 0 -.2rem;
+    width: 108%;
   }
   .gallery__item--4 {
-    margin: 0 0.6rem 2.9rem 1.3rem;
+    margin: 0.2rem 0rem 0rem 1.8rem;
+    max-width: 89%;
   }
   .gallery__item--5 {
     -ms-grid-column: 4;
@@ -460,20 +466,21 @@ footer a {
     grid-column: 4 / 6;
     -ms-grid-row: 7;
     grid-row: 7;
-    margin: 0rem -0.9rem 1.8rem -1.7rem;
+    margin: 0.4rem 0rem 0rem -1.5rem;
+    width: 132%;
   }
   .gallery__item--6 {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1 / 4;
-    margin: 0rem 2rem 1.5rem 0.6rem;
+    margin: 0.4rem 0rem 0rem 0rem;
+    width: 87%;
   }
   footer {
     margin: 4rem 0 2rem 0;
   }
 }
 
-/*  bigger laptops etc. */
 @media screen and (min-device-width: 1440px) and (-webkit-min-device-pixel-ratio: 1) {
   .container {
     max-width: 1440px;
